assets/style/blog-article.less
#blog .article{
  text-align: center;
  .picture{
    margin: 0 0 20px;
    img{
      max-width: 100%;
      max-height: 300px;
    }
  }
  .title{
    h1{
      margin: 0;
    }
  }
  .metadata{
    .date{
      margin: 0 0 20px;
    }
  }
  .excerpt{
    padding: 20px;
    width: 60%;
    margin: 0 auto;
    @media only screen and (max-width : 768px) {
      width: 100%;
    }
    p, a{
      color: lighten(@black, 15%);
    }
    a{
      text-decoration: underline;
    }
    code{
      font-size: 13px;
    }
    pre{
      font-size: 12px;
      background: @_white;
      border: none;
      box-shadow:inset 0px 0px 0px 1px #ccc;
      span{
        font-family: Menlo, Monaco, Consolas, "Courier New", monospace !important;
        font-size: 12px;
      }
      code{
        font-size: 12px;
      }
    }
    p img{
      display: table-cell;
      margin: auto;
    }
    .hljs{
      margin: -10px;
      padding: 20px;
    }
  }
}

